# resume-reviewer

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  review_resume.py  run_web.py
samples/: sample_job.txt  sample_resume.txt
src/resume_reviewer/: __init__.py  analyzer.py  cli.py  extractors.py  models.py  rendering.py  web.py  wsgi.py
tests/: test_analyzer.py
